<resources>
    <string name="app_name" translatable="false">Cirrus</string>
    <string name="activity_about">About</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_weather">Weather</string>
    <string name="activity_manage">Manage locations</string>
    <string name="action_refresh">Refresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">Next</string>
    <string name="okay">Okay</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Cirrus is an App to check the current Weather and Forecasts for your Locations.</string>
    <string name="slide2_heading" translatable="false">Github</string>
    <string name="slide2_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the About Page.</string>
    <string name="card_details_heading">Now</string>
    <string name="card_details_humidity">Humidity:</string>
    <string name="card_details_pressure">Pressure:</string>
    <string name="card_details_wind_speed">Wind:</string>
    <string name="card_week_heading">Week</string>
    <string name="card_error_heading">Error fetching weather data</string>
    <string name="card_error_content">Please try to update!</string>
    <string name="about_privacy_heading">Privacy Info</string>
    <string name="about_permission_internet_description">Connecting to the Network: This permission is needed because weather data is retrieved by making requests to servers on the Internet. Without this permission, no weather data can be received. Optional: authorization for GPS.</string>
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_license">License</string>
    <string name="about_license_text" translatable="false">SECUSO Privacy Friendly Weather (GPLv3)\nGoogle Material Design Icons (Apache-2.0)\nLeaflet (2-clause BSD License)\nOsmdroid (Apache-2.0)\nAutoSuggestTextViewAPICall (Apache-2.0)\nWilliamChart (Apache-2.0)\nAndroid Volley (Apache-2.0)\nAndroid Material Components (Apache-2.0)\nAndroidX (Apache-2.0)</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_github" translatable="false"><a href="https://github.com/woheller69/omweather">Github-Repo</a></string>
    <string name="about_openmeteo" translatable="false"><a href="https://open-meteo.com">Open-Meteo \n(Attribution 4.0 International CC BY 4.0)</a></string>
    <string name="about_rainviewer" translatable="false"><a href="https://LibreWXR.net">LibreWXR</a></string>
    <string name="activity_settings_title">Settings</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_temperature">Temperature</string>
    <string name="settings_celsius">Celsius</string>
    <string name="settings_kelvin">Kelvin</string>
    <string name="settings_fahrenheit">Fahrenheit</string>
    <string name="settings_title_speed">Wind speed</string>
    <string name="abbreviation_monday">Mo.</string>
    <string name="abbreviation_tuesday">Tu.</string>
    <string name="abbreviation_wednesday">We.</string>
    <string name="abbreviation_thursday">Th.</string>
    <string name="abbreviation_friday">Fr.</string>
    <string name="abbreviation_saturday">Sa.</string>
    <string name="abbreviation_sunday">Su.</string>
    <string name="dialog_add_label">Enter the location to add:</string>
    <string name="dialog_add_no_city_found">No location was found that matches your input. It is recommended to select one of the items from the dropdown list.  </string>
    <string name="dialog_add_close_button">Close</string>
    <string name="dialog_add_add_button">Add</string>
    <string name="error_convert_to_json">The retrieved weather data was not well-formed. </string>
    <string name="error_no_internet">Your Device is not connected to the Internet</string>
    <string name="error_fetch_forecast">Error while updating Forecast, please try again!</string>
    <string name="error_no_city_selected">There is no city selected. To select a city go to \"Manage locations\".</string>
    <string name="settings_interval_quarter">15 min</string>
    <string name="settings_interval_half">30 min</string>
    <string name="settings_interval_one">1 h</string>
    <string name="settings_interval_two">2 h</string>
    <string name="settings_interval_six">6 h</string>
    <string name="settings_interval_twelve">12 h</string>
    <string name="settings_interval_twentyfour">24 h</string>
    <string name="settings_intervals">Intervals</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="settings_interval_summary">Set the interval of automatic updates</string>
    <string name="about_privacy_answer">Cirrus only uses the permission \"Internet\" to retrieve weather data. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="about_where_from">Where do the weather informations come from?</string>
    <string name="about_where_from_answer">Weather information is fetched from</string>
    <string name="about_permissions">Permissions</string>
    <string name="long_press_text">Hold and drag to sort.</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="settings_title_display_options">Display options</string>
    <string name="infoProvider">Weather information is fetched from Open-Meteo.com \&amp; LibreWXR.net</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="chart">Chart</string>
    <string name="units_rh">% rh</string>
    <string name="units_mm">mm</string>
    <string name="units_km">km</string>
    <string name="units_hPa">hPa</string>
    <string name="units_Bft">Bft</string>
    <string name="units_mm_h">mm/h</string>
    <string name="units_km_h">km/h</string>
    <string name="units_mph">mph</string>
    <string name="units_K">K</string>
    <string name="units_in" translatable="false">\u2033</string>
    <string name="card_details_rain60min">☔ 60 min:</string>
    <string name="error_no_rain60min_data">no data</string>
    <string name="dialog_edit_change_button">Modify</string>
    <string name="edit_location_hint_name">Name</string>
    <string name="settings_search">Search</string>
    <string name="settings_temp_decimal">Show temperature with one decimal</string>
    <string name="settings_darkmode">Android 10+ Dark Mode</string>
    <string name="settings_position">Position</string>
    <string name="settings_GPS_summary">Allow usage of current GPS position in first TAB and in current weather widget. Position update is triggered automatically by widget.</string>
    <string name="settings_GPS_position">Allow GPS usage</string>
    <string name="error_no_position">No position available</string>
    <string name="settings_time24h">24-hour format</string>
    <string name="summary_time24h">Override system setting</string>
    <string name="dialog_OK_button">OK</string>
    <string name="dialog_NO_button">No</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="settings_show_pressure">Show air pressure</string>
    <string name="action_position" translatable="false">Update Location</string>
    <string name="settings_GPS_manual">Manual update only</string>
    <string name="rationale_background_location">Please also allow GPS usage in the background for use in the widget</string>
    <string name="error_no_gps">Please turn on GPS</string>
    <string name="slide3_heading">Open-Meteo</string>
    <string name="RainViewer">Rain Radar</string>
    <string name="action_rainviewer" translatable="false">Rain radar</string>
    <string name="summary_reanalyze">Improve week icons by analyzing hourly forecasts between sunrise and sunset (experimental).</string>
    <string name="settings_reanalyze">Week Icons</string>
    <string name="settings_precipitation">Precipitation</string>
    <string name="summary_precipitation">Use snow amount  instead of the equivalent amount of water.</string>
    <string name="settings_forecast_days">Number of forecast days</string>
    <string name="settings_apparent_temperature">Show \"feels like\" temperature</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="units_hours">h</string>
    <string name="settings_title_precipitation">Precipitation</string>
    <string name="about_license_intro">This app is licensed under GPLv3. It uses code from:</string>
    <string name="units_m_s">m/s</string>
    <string name="units_kn">kn</string>
    <string name="settings_widget_transparency">Widget transparency</string>
    <string name="units_mi">mi</string>
    <string name="GridLayout">2 columns</string>
    <string name="activity_backuprestore">Backup/Restore</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_message">%s needs access to external storage. Please accept permission and try again.</string>
    <string name="toast_delete">Please delete file and try again</string>
    <string name="restore_database_message">Restore Data from Documents folder. Open folder \'Documents\' and select Cirrus.zip if needed!</string>
    <string name="settings_show_hourly_uv_index">Show hourly UV index</string>
    <string name="settings_show_infrared">Show clouds</string>
    <string name="settings_radar_widget_zoom">Radar widget zoom</string>
    <string name="donate_librewxr">Support LibreWXR</string>
</resources>
